--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,7 @@
     </style>
 </head>
 <body>
-    <ul id="list">
-        <li>Test</li>
-    </ul>
+    <ul id="list"></ul>
     <form action="" id="new-task-form">
         <input type="text" id="new-task-title">
         <button type="submit">Add task</button>
